--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
       POSTGRES_USER: auth_user
       POSTGRES_PASSWORD: auth_password
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./init:/docker-entrypoint-initdb.d
-    ports:
-      - "5432:5432"
+      - postgres_data:/var/lib/postgresql/data:Z
+      - ./init:/docker-entrypoint-initdb.d:Z
+    expose:
+      - "5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U auth_user -d auth_demo"]
       interval: 10s
@@ -20,8 +20,8 @@ services:
 
   redis:
     image: redis:7-alpine
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379"
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -33,8 +33,6 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     environment:
-      - FLASK_APP=app.py
-      - FLASK_ENV=development
       - DATABASE_URL=postgresql://auth_user:auth_password@postgres:5432/auth_demo
       - REDIS_URL=redis://redis:6379
       - JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production
@@ -43,21 +41,15 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    volumes:
-      - ./backend:/app
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     environment:
-      - FLASK_APP=app.py
-      - FLASK_ENV=development
       - BACKEND_URL=http://nginx
     depends_on:
       - backend
-    volumes:
-      - ./frontend:/app
 
   nginx:
     build:
