Fix frontend API routing to use correct /api/v1 prefix
- Update docker-compose.yml to set BACKEND_URL to backend service directly
- Update frontend/app.py to use correct API endpoint paths
- All API calls now include /api/v1 prefix: /api/v1/auth/login, /api/v1/users, etc.
- Fixes issue where frontend was calling backend without proper route prefix

The frontend now correctly calls the backend API endpoints with the full path
as expected by the Flask backend application.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     environment:
-      - BACKEND_URL=http://nginx
+      - BACKEND_URL=http://backend:5000
     depends_on:
       - backend
 
