--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,7 +46,7 @@ http {
         }
 
         # Demo application routes
-        location /demo/ {
+        location / {
             limit_req zone=api burst=20 nodelay;
             proxy_pass http://demo/;
             proxy_set_header Host $host;
