--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init:/docker-entrypoint-initdb.d
-    ports:
-      - "5432:5432"
+    # ports:
+    #   - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U auth_user -d auth_demo"]
       interval: 10s
@@ -22,8 +22,8 @@ services:
   # Redis Cache
   redis:
     image: redis:7-alpine
-    ports:
-      - "6379:6379"
+    # ports:
+    #   - "6379:6379"
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -38,8 +38,8 @@ services:
       - REDIS_URL=redis://redis:6379
       - SECRET_KEY=your-super-secret-key-change-in-production
       - JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production
-    ports:
-      - "5000:5000"
+    # ports:
+    #    - "5000:5000"
     depends_on:
       postgres:
         condition: service_healthy
@@ -58,8 +58,8 @@ services:
     environment:
       - BACKEND_URL=http://backend:5000
       - SECRET_KEY=your-secret-key-change-in-production
-    ports:
-      - "8080:5000"
+    #  ports:
+    #    - "8080:5000"
     depends_on:
       backend:
         condition: service_healthy
@@ -76,8 +76,8 @@ services:
     environment:
       - AUTH_SERVICE_URL=http://backend:5000
       - SECRET_KEY=demo-secret-key-change-in-production
-    ports:
-      - "5001:5001"
+    # ports:
+    #   - "5001:5001"
     depends_on:
       backend:
         condition: service_healthy
@@ -92,7 +92,7 @@ services:
   nginx:
     build: ./nginx
     ports:
-      - "80:80"
+      - "8080:80"
     depends_on:
       - backend
       - frontend
