Refactor backend into Python package ai_auth_backend
- Restructure backend as proper Python package with relative imports
- Create setup.py and pyproject.toml for modern Python packaging
- Move app/, auth_engine/, and models to ai_auth_backend/ package
- Create multi-stage Dockerfile that builds wheel and installs it
- Add development Dockerfile for editable installs
- Create CLI module with click commands for common tasks
- Add wsgi.py for production deployment with Gunicorn
- Create Makefile with development commands
- Update requirements.txt to only include dev dependencies
- Add comprehensive .gitignore for Python packages
- Add basic test structure to verify package imports
- Package name: ai_auth_backend
- Entry point: ai-auth-backend command
- Multi-stage build: builder stage creates wheel, runtime stage installs it

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,70 @@
-FROM python:3.11-slim
+# Multi-stage build for AI Auth Backend
+# Stage 1: Build the Python wheel
+FROM python:3.11-slim as builder
 
+# Set working directory
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Install build dependencies
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
 
-COPY . .
+# Copy package configuration files
+COPY pyproject.toml setup.py ./
+COPY ai_auth_backend/ ./ai_auth_backend/
 
+# Create virtual environment and install build tools
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Install build dependencies
+RUN pip install --upgrade pip setuptools wheel build
+
+# Build the wheel
+RUN python -m build --wheel --outdir /wheels
+
+# Stage 2: Production runtime
+FROM python:3.11-slim as runtime
+
+# Set working directory
+WORKDIR /app
+
+# Install runtime dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create non-root user
+RUN useradd --create-home --shell /bin/bash app
+
+# Copy virtual environment from builder stage
+COPY --from=builder /opt/venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Copy the built wheel
+COPY --from=builder /wheels /wheels
+
+# Install the wheel
+RUN pip install --no-cache-dir /wheels/*.whl
+
+# Copy application code
+COPY wsgi.py ./
+
+# Create necessary directories
+RUN mkdir -p /app/logs && chown -R app:app /app
+
+# Switch to non-root user
+USER app
+
+# Expose port
 EXPOSE 5000
 
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "4", "--timeout", "120", "app:app"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:5000/health || exit 1
+
+# Default command
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "4", "--timeout", "120", "wsgi:app"]
 
 # The end.
