Refactor backend to wheel-based package structure
- Convert backend from app/ structure to gilla_auth.api namespace package
- Add setup.cfg and setup.py for wheel packaging
- Replace single-stage Dockerfile with multi-stage Containerfile
- Update docker-compose.yml to use new Containerfile
- Add backend README.md documenting the new structure
- Update Makefile to reflect new build process
- Remove old requirements.txt (dependencies now in setup.cfg)
- All imports converted to relative imports for package structure

This refactoring enables the backend to be built as a wheel and installed
into a gunicorn container, improving deployment and packaging.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,49 @@
-FROM python:3.11-slim
+# Multi-stage container image to build gilla-auth-api and get it
+# installed and running under gunicorn on alpine.
+
+FROM python:3.11-slim AS build
+
+ENV \
+  PIP_DISABLE_PIP_VERSION_CHECK=1 \
+  PIP_NO_CACHE_DIR=1 \
+  PIP_ROOT_USER_ACTION=ignore
+
+WORKDIR /build
+
+COPY setup.cfg setup.py README.md ./
+COPY gilla_auth/ ./gilla_auth/
+
+RUN \
+  pip3 install build && \
+  python3 -m build .
+
+FROM python:3.11-alpine
+
+ENV \
+  PIP_DISABLE_PIP_VERSION_CHECK=1 \
+  PIP_NO_CACHE_DIR=1 \
+  PIP_ROOT_USER_ACTION=ignore
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Install gunicorn and other runtime dependencies
+RUN \
+  apk add --no-cache --virtual .build-deps gcc musl-dev libffi-dev && \
+  pip3 install gunicorn && \
+  apk del .build-deps
 
-COPY . .
+# Copy the built wheel from the build stage
+COPY --from=build /build/dist/gilla*.whl .
+
+# Install the wheel
+RUN pip3 install gilla*.whl && \
+    rm gilla*.whl
+
+# Create a non-root user
+RUN adduser -DS -s /sbin/nologin gilla gilla
+
+USER gilla
 
 EXPOSE 5000
 
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "4", "--timeout", "120", "app:app"]
-
-# The end.
+ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "4", "--timeout", "120", "gilla_auth.api:app"]
