Update attribution comments and ensure GPLv3 license consistency throughout project

--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -5,7 +5,7 @@ description = Gilla Authentication API - Flask-based authentication service
 author = Christopher O'Brien
 # O'Brien breaks a lot of tools
 author_email = obriencj@gmail.com
-license = MIT
+license = GPLv3
 long_description = file: README.md
 long_description_content_type = text/markdown
 
