--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -5,7 +5,11 @@ description = Gilla Authentication API - Flask-based authentication service
 author = Christopher O'Brien
 # O'Brien breaks a lot of tools
 author_email = obriencj@gmail.com
-license = GPLv3
+
+license = GNU General Public License v3 (GPLv3)
+license_files =
+  ../LICENSE
+  
 long_description = file: README.md
 long_description_content_type = text/markdown
 
