--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -8,8 +8,8 @@ author_email = obriencj@gmail.com
 
 license = GNU General Public License v3 (GPLv3)
 license_files =
-  ../LICENSE
-  
+  LICENSE
+
 long_description = file: README.md
 long_description_content_type = text/markdown
 
