--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -29,6 +29,9 @@ install_requires =
     Flask-OAuthlib>=0.9.0,<1.0
     requests>=2.31.0,<3.0
     Werkzeug>=2.2.0,<3.0
+    gssapi>=1.8.0,<2.0
+    cryptography>=41.0.0,<42.0
+    redis>=5.0.0,<6.0
 
 
 [tox:tox]
