--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -1,7 +1,8 @@
 [metadata]
-name = gilla-auth.api
+name = daftgila.api
 version = 0.1.0
-description = Gilla Authentication API - Flask-based authentication service
+description = Daft Gila Authentication API
+
 author = Christopher O'Brien
 # O'Brien breaks a lot of tools
 author_email = obriencj@gmail.com
@@ -13,66 +14,71 @@ license_files =
 long_description = file: README.md
 long_description_content_type = text/markdown
 
+
 [options]
-packages = 
-  gilla_auth.api
+packages =
+  daftgila.api
 zip_safe = False
 install_requires =
-    Flask>=2.3.0,<3.0
-    Flask-SQLAlchemy>=3.0.0,<4.0
-    Flask-JWT-Extended>=4.5.0,<5.0
-    Flask-CORS>=4.0.0,<5.0
-    psycopg2-binary>=2.9.0,<3.0
-    redis>=5.0.0,<6.0
-    bcrypt>=4.0.0,<5.0
-    python-dotenv>=1.0.0,<2.0
-    Flask-OAuthlib>=0.9.0,<1.0
-    requests>=2.31.0,<3.0
-    Werkzeug>=2.2.0,<3.0
-    gssapi>=1.8.0,<2.0
-    cryptography>=41.0.0,<42.0
-    redis>=5.0.0,<6.0
+  Flask>=2.3.0,<3.0
+  Flask-SQLAlchemy>=3.0.0,<4.0
+  Flask-JWT-Extended>=4.5.0,<5.0
+  Flask-CORS>=4.0.0,<5.0
+  psycopg2-binary>=2.9.0,<3.0
+  redis>=5.0.0,<6.0
+  bcrypt>=4.0.0,<5.0
+  python-dotenv>=1.0.0,<2.0
+  Flask-OAuthlib>=0.9.0,<1.0
+  requests>=2.31.0,<3.0
+  Werkzeug>=2.2.0,<3.0
+  gssapi>=1.8.0,<2.0
+  cryptography>=41.0.0,<42.0
+  redis>=5.0.0,<6.0
 
 
 [tox:tox]
 envlist = flake8,py{39,310,311}
 skip_missing_interpreters = true
 
+
 [testenv]
 commands =
-    python -B -m nose
+  python -B -m nose
 
 deps =
-    coverage
-    nose-py3
+  nose-py3
 
 download = true
+
 
 [testenv:flake8]
 basepython = python3.9
 commands =
-    python -B -m flake8 gilla_auth/
+  python -B -m flake8 preoccupied/daftgila/
 deps =
-    flake8
+  flake8
 skip_install = true
+
 
 [nosetests]
 all-modules = 1
 no-byte-compile = 1
 verbosity = 2
 
+
 [flake8]
 ignore = E303,E731,E741,F401,F812,W504
 filename = *.py
 exclude =
-    __pycache__
-    .*
-    build
-    dist
-    docs
-    htmlcov
-    setup.py
-    tests
-    *.egg-info
+  __pycache__
+  .*
+  build
+  dist
+  docs
+  htmlcov
+  setup.py
+  tests
+  *.egg-info
+
 
 # The end.
