further wip towards renaming towards daft-gila

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,10 +5,15 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY daftgila ./daftgila/
 
 EXPOSE 8000
 
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers", "4", "--timeout", "120", "app:app"]
+CMD ["gunicorn", \
+    "--bind", "0.0.0.0:8000", \
+    "--workers", "4", \
+    "--timeout", "120", \
+    "daftgila.web:app"]
+
 
 # The end.
