--- a/frontend/setup.cfg
+++ b/frontend/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = daftgila.api
+name = daftgila.web
 version = 0.1.0
 description = Daft Gila Authentication API
 
@@ -17,24 +17,24 @@ long_description_content_type = text/markdown
 
 [options]
 packages =
-  daftgila.api
-  
+  daftgila.web
+  daftgila.web.auth
+
+include_package_data = True
+
 zip_safe = False
+
 install_requires =
-  Flask>=2.3.0,<3.0
-  Flask-SQLAlchemy>=3.0.0,<4.0
-  Flask-JWT-Extended>=4.5.0,<5.0
-  Flask-CORS>=4.0.0,<5.0
-  psycopg2-binary>=2.9.0,<3.0
-  redis>=5.0.0,<6.0
-  bcrypt>=4.0.0,<5.0
-  python-dotenv>=1.0.0,<2.0
-  Flask-OAuthlib>=0.9.0,<1.0
-  requests>=2.31.0,<3.0
-  Werkzeug>=2.2.0,<3.0
-  gssapi>=1.8.0,<2.0
-  cryptography>=41.0.0,<42.0
-  redis>=5.0.0,<6.0
+  Flask==2.3.3
+  requests==2.31.0
+  gunicorn==21.2.0
+  daftgila.client==0.1.0
+
+
+[options.package_data]
+daftgila.web =
+  static/*
+  templates/*
 
 
 [tox:tox]
