--- a/client/setup.cfg
+++ b/client/setup.cfg
@@ -3,42 +3,47 @@ name = daftgila.client
 version = 0.1.0
 description = Object-oriented requests wrapper for DaftGila API
 author = Christopher O'Brien
+# O'Brien breaks a lot of tools
 author_email = obriencj@gmail.com
+
 license = GNU General Public License v3.0
+license_files =
+  LICENSE
+
 long_description = file: README.md
 long_description_content_type = text/markdown
+
 url = https://github.com/obriencj/ai-madness-auth-demo
 classifiers =
-    Development Status :: 3 - Alpha
-    Intended Audience :: Developers
-    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
-    Programming Language :: Python :: 3.10
-    Programming Language :: Python :: 3.11
-    Programming Language :: Python :: 3.12
-    Topic :: Internet :: WWW/HTTP :: HTTP Servers
-    Topic :: Security :: Authentication
-    Topic :: Software Development :: Libraries :: Python Modules
+  Development Status :: 3 - Alpha
+  Intended Audience :: Developers
+  Programming Language :: Python :: 3
+  Programming Language :: Python :: 3.8
+  Programming Language :: Python :: 3.9
+  Programming Language :: Python :: 3.10
+  Programming Language :: Python :: 3.11
+  Programming Language :: Python :: 3.12
+  Topic :: Security :: Authentication
+  Topic :: Software Development :: Libraries :: Python Modules
+
 
 [options]
-packages = find:
+packages =
+  daftgila.client
+  
 python_requires = >=3.8
 install_requires =
-    requests>=2.25.0
-    typing-extensions>=3.7.4;python_version<"3.8"
+  requests>=2.25.0
+  typing-extensions>=3.7.4;python_version<"3.8"
 
-[options.packages.find]
-include = daftgila*
 
 [options.extras_require]
 dev =
-    pytest>=6.0
-    pytest-cov>=2.10
-    black>=21.0
-    flake8>=3.8
-    mypy>=0.800
+  pytest>=6.0
+  pytest-cov>=2.10
+  black>=21.0
+  flake8>=3.8
+  mypy>=0.800
 
 [flake8]
 max-line-length = 88
