--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -18,7 +18,8 @@ long_description_content_type = text/markdown
 [options]
 packages =
   daftgila.api
-  
+  daftgila.api.config
+
 zip_safe = False
 install_requires =
   Flask>=2.3.0,<3.0
